--- a/views/index/index_teacher.ejs
+++ b/views/index/index_teacher.ejs
@@ -1094,7 +1094,7 @@
                         </div>
                         
                      <!-- Post-test Score -->
-                        <div>
+                        <div><%= (PreStringCount)%>
                             <b>Post-test</b>
                             <div class="card_box"><!-- Lab 1-->
                                 <div class="card_title">
