--- a/views/teacher/class-Student.ejs
+++ b/views/teacher/class-Student.ejs
@@ -56,6 +56,9 @@
                                     <div> 
                                         <div class="info" style="width: auto;">Character</div> <br>
                                         <!-- k -->
+                                         <% if(Studentresult[i].post_k === 0 && Studentresult[i].post_t === 0 && Studentresult[i].post_e === 0 && Studentresult[i].post_w === 0){ %>
+                                            none
+                                        <% } else { %> 
                                         <% if(Studentresult[i].post_k > Studentresult[i].post_t && Studentresult[i].post_k > Studentresult[i].post_e && Studentresult[i].post_k > Studentresult[i].post_w){ %>
                                             k
                                         <% } %> 
@@ -107,7 +110,7 @@
                                         <% if(Studentresult[i].post_w === Studentresult[i].post_k && Studentresult[i].post_w === Studentresult[i].post_t && Studentresult[i].post_w === Studentresult[i].post_e){ %>
                                             k = t = e = w
                                         <% } %> 
-
+                                        <% } %>
                                     </div>
                                 </td>
                                 <td class="text-start"> <!-- Project Quiz -->
@@ -492,25 +495,25 @@
                                         <div style="font-size: 12px;"></div>
                                         <progress  max="100" value=<%= ((((Studentresult[i].pre1lv1+Studentresult[i].pre2lv1+Studentresult[i].pre3lv1+Studentresult[i].pre4lv1+Studentresult[i].pre5lv1+Studentresult[i].pre6lv1+Studentresult[i].pre7lv1+Studentresult[i].pre8lv1)/Studentresult[i].pre)/5)*100) %>  class="bar1 "></progress>
                                         <div style="margin-left: 5px;"><%= (((Studentresult[i].pre1lv1+Studentresult[i].pre2lv1+Studentresult[i].pre3lv1+Studentresult[i].pre4lv1+Studentresult[i].pre5lv1+Studentresult[i].pre6lv1+Studentresult[i].pre7lv1+Studentresult[i].pre8lv1)/Studentresult[i].pre)) %>/5</div>
-                                        <div style="margin-left: 5px;">(<%= ((((Studentresult[i].pre1lv1+Studentresult[i].pre2lv1+Studentresult[i].pre3lv1+Studentresult[i].pre4lv1+Studentresult[i].pre5lv1+Studentresult[i].pre6lv1+Studentresult[i].pre7lv1+Studentresult[i].pre8lv1)/Studentresult[i].pre)/5)*100) %>%)</div>
+                                        <div style="margin-left: 5px;">(<%= Math.round((((Studentresult[i].pre1lv1+Studentresult[i].pre2lv1+Studentresult[i].pre3lv1+Studentresult[i].pre4lv1+Studentresult[i].pre5lv1+Studentresult[i].pre6lv1+Studentresult[i].pre7lv1+Studentresult[i].pre8lv1)/Studentresult[i].pre)/5)*100) %>%)</div>
                                     </div>
                                     <div style="display: flex;">
                                         <div style="width: 50px;">&ensp;T</div>
                                         <progress  max="100" value=<%= ((((Studentresult[i].pre1lv2+Studentresult[i].pre2lv2+Studentresult[i].pre3lv2+Studentresult[i].pre4lv2+Studentresult[i].pre5lv2+Studentresult[i].pre6lv2+Studentresult[i].pre7lv2+Studentresult[i].pre8lv2)/Studentresult[i].pre)/5)*100) %>  class="bar1 "></progress>
                                         <div style="margin-left: 5px;"><%= (((Studentresult[i].pre1lv2+Studentresult[i].pre2lv2+Studentresult[i].pre3lv2+Studentresult[i].pre4lv2+Studentresult[i].pre5lv2+Studentresult[i].pre6lv2+Studentresult[i].pre7lv2+Studentresult[i].pre8lv2)/Studentresult[i].pre)) %>/5</div>
-                                        <div style="margin-left: 5px;">(<%= ((((Studentresult[i].pre1lv2+Studentresult[i].pre2lv2+Studentresult[i].pre3lv2+Studentresult[i].pre4lv2+Studentresult[i].pre5lv2+Studentresult[i].pre6lv2+Studentresult[i].pre7lv2+Studentresult[i].pre8lv2)/Studentresult[i].pre)/5)*100) %>%)</div>
+                                        <div style="margin-left: 5px;">(<%= Math.round((((Studentresult[i].pre1lv2+Studentresult[i].pre2lv2+Studentresult[i].pre3lv2+Studentresult[i].pre4lv2+Studentresult[i].pre5lv2+Studentresult[i].pre6lv2+Studentresult[i].pre7lv2+Studentresult[i].pre8lv2)/Studentresult[i].pre)/5)*100) %>%)</div>
                                     </div>
                                     <div style="display: flex;">
                                         <div style="width: 50px;">&ensp;E</div>
                                         <progress  max="100" value=<%= ((((Studentresult[i].pre1lv3+Studentresult[i].pre2lv3+Studentresult[i].pre3lv3+Studentresult[i].pre4lv3+Studentresult[i].pre5lv3+Studentresult[i].pre6lv3+Studentresult[i].pre7lv3+Studentresult[i].pre8lv3)/Studentresult[i].pre)/5)*100) %>  class="bar1 "></progress>
                                         <div style="margin-left: 5px;"><%= (((Studentresult[i].pre1lv3+Studentresult[i].pre2lv3+Studentresult[i].pre3lv3+Studentresult[i].pre4lv3+Studentresult[i].pre5lv3+Studentresult[i].pre6lv3+Studentresult[i].pre7lv3+Studentresult[i].pre8lv3)/Studentresult[i].pre)) %>/5</div>
-                                        <div style="margin-left: 5px;">(<%= ((((Studentresult[i].pre1lv3+Studentresult[i].pre2lv3+Studentresult[i].pre3lv3+Studentresult[i].pre4lv3+Studentresult[i].pre5lv3+Studentresult[i].pre6lv3+Studentresult[i].pre7lv3+Studentresult[i].pre8lv3)/Studentresult[i].pre)/5)*100) %>%)</div>
+                                        <div style="margin-left: 5px;">(<%= Math.round((((Studentresult[i].pre1lv3+Studentresult[i].pre2lv3+Studentresult[i].pre3lv3+Studentresult[i].pre4lv3+Studentresult[i].pre5lv3+Studentresult[i].pre6lv3+Studentresult[i].pre7lv3+Studentresult[i].pre8lv3)/Studentresult[i].pre)/5)*100) %>%)</div>
                                     </div>
                                     <div style="display: flex;">
                                         <div style="width: 50px;">&ensp;W</div>
                                         <progress  max="100" value=<%= ((((Studentresult[i].pre1lv4+Studentresult[i].pre2lv4+Studentresult[i].pre3lv4+Studentresult[i].pre4lv4+Studentresult[i].pre5lv4+Studentresult[i].pre6lv4+Studentresult[i].pre7lv4+Studentresult[i].pre8lv4)/Studentresult[i].pre)/25)*100) %>  class="bar1 "></progress>     
                                         <div style="margin-left: 5px;"><%= (((Studentresult[i].pre1lv4+Studentresult[i].pre2lv4+Studentresult[i].pre3lv4+Studentresult[i].pre4lv4+Studentresult[i].pre5lv4+Studentresult[i].pre6lv4+Studentresult[i].pre7lv4+Studentresult[i].pre8lv4)/Studentresult[i].pre)) %>/25</div>                                  
-                                        <div style="margin-left: 5px;">(<%= ((((Studentresult[i].pre1lv4+Studentresult[i].pre2lv4+Studentresult[i].pre3lv4+Studentresult[i].pre4lv4+Studentresult[i].pre5lv4+Studentresult[i].pre6lv4+Studentresult[i].pre7lv4+Studentresult[i].pre8lv4)/Studentresult[i].pre)/25)*100) %>%)</div>   
+                                        <div style="margin-left: 5px;">(<%= Math.round((((Studentresult[i].pre1lv4+Studentresult[i].pre2lv4+Studentresult[i].pre3lv4+Studentresult[i].pre4lv4+Studentresult[i].pre5lv4+Studentresult[i].pre6lv4+Studentresult[i].pre7lv4+Studentresult[i].pre8lv4)/Studentresult[i].pre)/25)*100) %>%)</div>   
                                     </div>
                                     <br>
                                     <div class="head">คะแนน Post-test</div>
@@ -518,25 +521,25 @@
                                         <div style="width: 50px;">&ensp;K</div>
                                         <progress  max="100" value=<%= ((((Studentresult[i].post1lv1+Studentresult[i].post2lv1+Studentresult[i].post3lv1+Studentresult[i].post4lv1+Studentresult[i].post5lv1+Studentresult[i].post6lv1+Studentresult[i].post7lv1+Studentresult[i].post8lv1)/Studentresult[i].post)/5)*100) %>  class="bar2 "></progress>
                                         <div style="margin-left: 5px;"><%= (((Studentresult[i].post1lv1+Studentresult[i].post2lv1+Studentresult[i].post3lv1+Studentresult[i].post4lv1+Studentresult[i].post5lv1+Studentresult[i].post6lv1+Studentresult[i].post7lv1+Studentresult[i].post8lv1)/Studentresult[i].post)) %>/5</div>
-                                        <div style="margin-left: 5px;">(<%= ((((Studentresult[i].post1lv1+Studentresult[i].post2lv1+Studentresult[i].post3lv1+Studentresult[i].post4lv1+Studentresult[i].post5lv1+Studentresult[i].post6lv1+Studentresult[i].post7lv1+Studentresult[i].post8lv1)/Studentresult[i].post)/5)*100) %>%)</div>
+                                        <div style="margin-left: 5px;">(<%= Math.round((((Studentresult[i].post1lv1+Studentresult[i].post2lv1+Studentresult[i].post3lv1+Studentresult[i].post4lv1+Studentresult[i].post5lv1+Studentresult[i].post6lv1+Studentresult[i].post7lv1+Studentresult[i].post8lv1)/Studentresult[i].post)/5)*100) %>%)</div>
                                     </div>
                                     <div style="display: flex;">
                                         <div style="width: 50px;">&ensp;T</div>
                                         <progress  max="100" value=<%= ((((Studentresult[i].post1lv2+Studentresult[i].post2lv2+Studentresult[i].post3lv2+Studentresult[i].post4lv2+Studentresult[i].post5lv2+Studentresult[i].post6lv2+Studentresult[i].post7lv2+Studentresult[i].post8lv2)/Studentresult[i].post)/5)*100) %>  class="bar2 "></progress>
                                         <div style="margin-left: 5px;"><%= (((Studentresult[i].post1lv2+Studentresult[i].post2lv2+Studentresult[i].post3lv2+Studentresult[i].post4lv2+Studentresult[i].post5lv2+Studentresult[i].post6lv2+Studentresult[i].post7lv2+Studentresult[i].post8lv2)/Studentresult[i].post)) %>/5</div>
-                                        <div style="margin-left: 5px;"><%= ((((Studentresult[i].post1lv2+Studentresult[i].post2lv2+Studentresult[i].post3lv2+Studentresult[i].post4lv2+Studentresult[i].post5lv2+Studentresult[i].post6lv2+Studentresult[i].post7lv2+Studentresult[i].post8lv2)/Studentresult[i].post)/5)*100) %>%</div>
+                                        <div style="margin-left: 5px;"><%= Math.round((((Studentresult[i].post1lv2+Studentresult[i].post2lv2+Studentresult[i].post3lv2+Studentresult[i].post4lv2+Studentresult[i].post5lv2+Studentresult[i].post6lv2+Studentresult[i].post7lv2+Studentresult[i].post8lv2)/Studentresult[i].post)/5)*100) %>%</div>
                                     </div>
                                     <div style="display: flex;">
                                         <div style="width: 50px;">&ensp;E</div>
                                         <progress  max="100" value=<%= ((((Studentresult[i].post1lv3+Studentresult[i].post2lv3+Studentresult[i].post3lv3+Studentresult[i].post4lv3+Studentresult[i].post5lv3+Studentresult[i].post6lv3+Studentresult[i].post7lv3+Studentresult[i].post8lv3)/Studentresult[i].post)/5)*100) %>  class="bar2 "></progress>
                                         <div style="margin-left: 5px;"><%= (((Studentresult[i].post1lv3+Studentresult[i].post2lv3+Studentresult[i].post3lv3+Studentresult[i].post4lv3+Studentresult[i].post5lv3+Studentresult[i].post6lv3+Studentresult[i].post7lv3+Studentresult[i].post8lv3)/Studentresult[i].post)) %>/5</div>
-                                        <div style="margin-left: 5px;">(<%= ((((Studentresult[i].post1lv3+Studentresult[i].post2lv3+Studentresult[i].post3lv3+Studentresult[i].post4lv3+Studentresult[i].post5lv3+Studentresult[i].post6lv3+Studentresult[i].post7lv3+Studentresult[i].post8lv3)/Studentresult[i].post)/5)*100) %>%)</div>
+                                        <div style="margin-left: 5px;">(<%= Math.round((((Studentresult[i].post1lv3+Studentresult[i].post2lv3+Studentresult[i].post3lv3+Studentresult[i].post4lv3+Studentresult[i].post5lv3+Studentresult[i].post6lv3+Studentresult[i].post7lv3+Studentresult[i].post8lv3)/Studentresult[i].post)/5)*100) %>%)</div>
                                     </div>
                                     <div style="display: flex;">
                                         <div style="width: 50px;">&ensp;W</div>
                                         <progress  max="100" value=<%= ((((Studentresult[i].post1lv4+Studentresult[i].post2lv4+Studentresult[i].post3lv4+Studentresult[i].post4lv4+Studentresult[i].post5lv4+Studentresult[i].post6lv4+Studentresult[i].post7lv4+Studentresult[i].post8lv4)/Studentresult[i].post)/25)*100) %>  class="bar2 "></progress>
                                         <div style="margin-left: 5px;"><%= (((Studentresult[i].post1lv4+Studentresult[i].post2lv4+Studentresult[i].post3lv4+Studentresult[i].post4lv4+Studentresult[i].post5lv4+Studentresult[i].post6lv4+Studentresult[i].post7lv4+Studentresult[i].post8lv4)/Studentresult[i].post)) %>/25</div>
-                                        <div style="margin-left: 5px;">(<%= ((((Studentresult[i].post1lv4+Studentresult[i].post2lv4+Studentresult[i].post3lv4+Studentresult[i].post4lv4+Studentresult[i].post5lv4+Studentresult[i].post6lv4+Studentresult[i].post7lv4+Studentresult[i].post8lv4)/Studentresult[i].post)/25)*100) %>%)</div>
+                                        <div style="margin-left: 5px;">(<%= Math.round((((Studentresult[i].post1lv4+Studentresult[i].post2lv4+Studentresult[i].post3lv4+Studentresult[i].post4lv4+Studentresult[i].post5lv4+Studentresult[i].post6lv4+Studentresult[i].post7lv4+Studentresult[i].post8lv4)/Studentresult[i].post)/25)*100) %>%)</div>
                                     </div>
                                     <br>
                                     
