--- a/views/teacher/answer.ejs
+++ b/views/teacher/answer.ejs
@@ -2,8 +2,8 @@
 
 
 <%# START %> 
-<form action="/question/submit" method="post" autocomplete="off" >
-    <textarea class="" placeholder="คำถาม" style="width: 300px;" rows="3" cols="10" name="question" required></textarea>
+<form action="/answer/submit" method="post" autocomplete="off" >
+    <textarea class="" placeholder="คำตอบ" style="width: 300px;" rows="3" cols="10" name="answer" required></textarea>
     <%# SUBMIT %> 
     <!-- Button trigger modal -->
     <div class="">
