--- a/views/index/index_teacher.ejs
+++ b/views/index/index_teacher.ejs
@@ -383,7 +383,8 @@
                     </div>                                   
                     <div class="quiz_box">
                         <p class="score_title">Quiz 3</p>
-                        <div class="pie animate" style="--p:<%= RoshamboScore*4 %>;--c:#bd7b67; font-size: 14px;"> <%= RoshamboScore %></div>                  
+                        <div class="pie animate" style="--p:<%= 578757
+                        RoshamboScore*4 %>;--c:#bd7b67; font-size: 14px;"> <%= RoshamboScore %></div>                  
                     </div> 
                 </div>
                 
