--- a/views/index/index_teacher.ejs
+++ b/views/index/index_teacher.ejs
@@ -70,18 +70,6 @@
 
 <br><br><br>
     <div id = "content" class="container" >
-
-                        <div id = "content" class="container">
-                            <h4 style="color: #000;" id = 'content'>Question Board</h4>   
-                            <div class="box bg-light  mb-5 shadow" style="padding: 10px; border-radius: 5px;">
-                                <table class="table text-center">
-                                    <tbody class="text-end">
-
-                                    </tbody>
-                                </table>       
-                            </div>
-                        </div>
-               
         <div  class="group2">
             <div>
             <h4 class="chakra-petch-regular">Progress</h4>  
@@ -360,7 +348,7 @@
                     </script>
                 </div>
             </div>
-            <div><!-- Project score-->
+            <div>
                 <h4 class="chakra-petch-regular">Project-Quiz</h4>  <br>
                 <div style="display: flex;">
                     <div class="quiz_box">
@@ -374,15 +362,13 @@
                     </div>                                   
                     <div class="quiz_box">
                         <p class="score_title">Quiz 3</p>
-                        <div class="pie animate" style="--p:<%= 578757
-                        RoshamboScore*4 %>;--c:#bd7b67; font-size: 14px;"> <%= RoshamboScore %></div>                  
+                        <div class="pie animate" style="--p:<%= RoshamboScore*4 %>;--c:#bd7b67; font-size: 14px;"> <%= RoshamboScore %></div>                  
                     </div> 
                 </div>
                 
             </div>
         
         </div><hr>
-        
         <div class="row" > 
             <div class="group2"> <!-- แบบทดสอบที่ผู้เรียนทำคะแนนได้มากสุด -->
                 <!--<div class="col-sm" >  sortedCourse 
@@ -406,7 +392,8 @@
                 </div>-->
                
                      <!-- Pre-test Score -->
-                     <h4 class="chakra-petch-regular">Score</h4><div></div>
+                     <h4 class="chakra-petch-regular">Score</h4>
+                      <div></div>
                         <div>
                             <b>Pre-test</b>
                             <div class="card_box"><!-- Lab 1-->
