--- a/views/teacher/check.ejs
+++ b/views/teacher/check.ejs
@@ -40,7 +40,7 @@
     <link rel='stylesheet' href='stylesheets/home1.css' />
     <link rel='stylesheet' href='stylesheets/compiler_line.css' />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
-    <title>Home</title>
+    <title>Check</title>
 </head>
 
 <body style="background-color: #cad19f;">
